--- a/src/components/Slide/Slide.css
+++ b/src/components/Slide/Slide.css
@@ -9,6 +9,7 @@ body {
 }
 
 .u-section-1 {
+    background-size: cover;
     position: absolute !important;
     width: 100% !important;
     height: 100% !important;
